# rust-s3-thing

./: .gitignore  Cargo.toml
src/: main.rs
