[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
axum = { version = "0.7.5", features = ["multipart", "http2"] }
dotenv = "0.15.0"
itertools = "0.12.1"
nanoid = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.115"
